[gd_scene load_steps=4 format=3 uid="uid://dtqtkr7kwh6s2"]

[ext_resource type="Texture2D" uid="uid://dx017q6or41lu" path="res://Assets/boss.png" id="1_0bnu1"]
[ext_resource type="Script" uid="uid://dr78mpiw7ithg" path="res://Scripts/boss.gd" id="1_t20dt"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_0bnu1"]
radius = 16.0
height = 32.0

[node name="Boss" type="Area2D"]
position = Vector2(250, 250)
collision_layer = 8
collision_mask = 3
script = ExtResource("1_t20dt")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_0bnu1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_0bnu1")

[node name="ShootTimer" type="Timer" parent="."]

[node name="Rotator" type="Node2D" parent="."]

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_shoot_timer_timeout"]
